--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,6 +78,7 @@ date.format=yyyy-MM-dd
 # Database configuration
 # ~~~~~ 
 # Enable a database engine if needed.
+db=${DATABASE_URL}
 #
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
@@ -113,11 +114,11 @@ date.format=yyyy-MM-dd
 # ~~~~~
 #
 # Specify the custom JPA dialect to use here (default to guess):
-# jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
-# jpa.ddl=update
+jpa.ddl=update
 #
 # Debug SQL statements (logged using DEBUG level):
 # jpa.debugSQL=true
