Some last minute niceties

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,6 +78,8 @@ date.format=yyyy-MM-dd
 # Database configuration
 # ~~~~~ 
 # Enable a database engine if needed.
+# To use the environment variable setting, run the following command: 
+# export DATABASE_URL=postgres://<username>:<password>@localhost/<db_name>
 db=${DATABASE_URL}
 #
 # To quickly set up a development database, use either:
